Attempt fix Experience section issues on ios browsers.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -132,10 +132,11 @@ body {
 }
 
 .fixed {
-    position: fixed !important;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
 /*****************************************************************************/
