--- a/client/src/components/ExperienceSection/ExperienceSection.css
+++ b/client/src/components/ExperienceSection/ExperienceSection.css
@@ -37,10 +37,6 @@
     width: calc(var(--home-container-width) - 3vw);
 }
 
-.experience-section-card.above {
-    /* margin-top: 20px; /\* Adjust as needed *\/ */
-}
-
 .experience-section-card.below {
     margin-top: 200px; /* Adjust as needed */
 }
